<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#b3e5fc">
    <ImageView
        android:id="@+id/quizImageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/quizlogopng6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        />
<!--    <Button-->
<!--        android:id="@+id/section1"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@id/quizImageView"-->
<!--        android:text="@string/section1"-->
<!--        android:layout_marginTop="40dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@id/section2"-->
<!--        />-->

<!--    <Button-->
<!--        android:id="@+id/section2"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/section2"-->
<!--        app:layout_constraintTop_toBottomOf="@id/quizImageView"-->
<!--        app:layout_constraintStart_toEndOf="@id/section1"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="40dp"/>-->
<!--    <Button-->
<!--        android:id="@+id/section3"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/section3"-->
<!--        app:layout_constraintTop_toBottomOf="@id/section1"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@id/section4"-->
<!--        />-->
<!--    <Button-->
<!--        android:id="@+id/section4"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/section4"-->
<!--        app:layout_constraintTop_toBottomOf="@id/section2"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@id/section3"-->
<!--        />-->
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/quizImageView"
    android:layout_marginTop="80dp"
    android:layout_marginRight="40dp"
    android:layout_marginLeft="40dp"
    app:cardBackgroundColor="#81d4fa"
    app:cardElevation="10dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewChemistry"
        android:layout_width="120dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cardViewPhysics"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#b2ebf2"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageViewChemistry"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:srcCompat="@drawable/ic_chemistry"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/section1"
                android:layout_below="@id/imageViewChemistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/section1"
                android:layout_marginTop="5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPhysics"
        android:layout_width="120dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cardViewChemistry"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#b2ebf2"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageViewPhysics"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:srcCompat="@drawable/ic_atom"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/section2"
                android:layout_below="@id/imageViewPhysics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/section2"
                android:layout_marginTop="5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewHistory"
            android:layout_width="120dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/cardViewChemistry"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cardViewBiology"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#b2ebf2">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imageViewBiology"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/ic_biology"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    />
                <TextView
                    android:id="@+id/section3"
                    android:layout_below="@id/imageViewBiology"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section3"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewBiology"
            android:layout_width="120dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/cardViewPhysics"
            app:layout_constraintLeft_toRightOf="@id/cardViewChemistry"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#b2ebf2"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imageViewHistory"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/ic_history"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    />
                <TextView
                    android:id="@+id/section4"
                    android:layout_below="@id/imageViewHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section4"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>